name:                gazay-works
version:             0.0.1
synopsis:            gazay-works web site
homepage:            https://github.com/gazay/gazay.works
license:             MIT
author:              Alexey Gaziev
maintainer:          alex.gaziev@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable gazay-works
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base ==4.6.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , persistent-template ==1.3.*
                     , persistent-sqlite ==1.3.*
                     , persistent-postgresql ==1.3.*
                     , monad-logger ==0.3.0
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
